# GenericProgrammingAndDesignPatternsApplied

./: CMakeLists.txt  README.md  common.h  main.cpp
1_Techniques/1_PolicyBasedClassDesign/: 1.1.h  1.2.h  1.3.h  1.4.h  1.5.h
