cmake_minimum_required(VERSION 3.15)
project(GenericProgrammingAndDesignPatternsApplied)

set(CMAKE_CXX_STANDARD 20)

add_executable(GenericProgrammingAndDesignPatternsApplied main.cpp 1_Techniques/1_PolicyBasedClassDesign/1.1.h 1_Techniques/1_PolicyBasedClassDesign/1.2.h 1_Techniques/1_PolicyBasedClassDesign/1.3.h 1_Techniques/1_PolicyBasedClassDesign/1.4.h common.h 1_Techniques/1_PolicyBasedClassDesign/1.5.h 1_Techniques/1_PolicyBasedClassDesign/1.4.h 1_Techniques/1_PolicyBasedClassDesign/1.5.h)